# rusty-nano

./: .gitignore  Cargo.toml  README.md  build.rs  makefile
.cargo/: config
self-tests/: Cargo.toml
self-tests/.cargo/: config.toml
self-tests/tests/: gclk-tests.rs  gpio-input-floating.rs  panic_handler.rs
src/: console.rs  gclk.rs  generic.rs  lib.rs  main.rs  print.rs  ring_buffer.rs  sercom0.rs  syncronization.rs  timer.rs
src/gclk/: clkctrl.rs  ctrl.rs  genctrl.rs
src/sercom0/: usart.rs
src/sercom0/usart/: ctrla.rs  data.rs  intflag.rs  status.rs
