
[package]
name = "nina-rust-tests"
publish = false
version = "0.0.0"

[[test]]
name = "gpio-input-floating"
harness = false # don't use the standard harnest


# defmt-test stuff

[dev-dependencies]

arduino_nina = { path = "../" }

defmt = "0.3.2"
defmt-rtt = "0.4.0"
defmt-test = "0.3.0"
panic-probe = { version = "^0.3.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}

[profile.dev]
opt-level = "s"