
[package]
name = "nina-rust-tests"
publish = false
version = "0.0.0"
autotests = false

[[test]]
name = "gpio-input-floating"
harness = false # don't use the standard harnest

[[test]]
name = "gclk-tests"
harness = false # don't use the standard harnest

# defmt-test stuff
[dependencies]
arduino_nina = { path = "../" }

[dev-dependencies]

defmt = "0.3.2"
defmt-rtt = "0.4.0"
defmt-test = "0.3.0"
panic-probe = { version = "^0.3.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}

[profile.dev]
opt-level = "s"